[project]
name = "yle-dl"
description = "Download videos from Yle servers"
readme = "README.md"
authors = [
    {name = "Antti Ajanki", email = "antti.ajanki@iki.fi"}
]
license = {text = "GPLv3+"}
dependencies = [
    "requests",
    "lxml",
    "ConfigArgParse >= 0.13.0",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
extra = [
    "psutil",
    "xattr;sys_platform != \"win32\"",
]

[project.scripts]
yle-dl = "yledl.yledl:main"

[project.urls]
Home = "https://aajanki.github.io/yle-dl/"
Source = "https://github.com/aajanki/yle-dl/"
changelog = "https://raw.githubusercontent.com/aajanki/yle-dl/master/ChangeLog"
issues = "https://github.com/aajanki/yle-dl/issues"

[tool.flit.module]
name = "yledl"

[tool.flit.sdist]
include = ["*.md", "COPYING", "ChangeLog", "setup.py", "yledl.conf.sample", "tests/**/*.py"]
exclude = ["**/*~"]

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"
