[project]
name = "yle-dl"
description = "Download videos from Yle servers"
readme = "README.md"
authors = [
    {name = "Antti Ajanki", email = "antti.ajanki@iki.fi"}
]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
dependencies = [
    "requests",
    "lxml",
    "ConfigArgParse >= 0.13.0",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version"]

[project.optional-dependencies]
extra = [
    "psutil",
    "xattr;sys_platform != \"win32\"",
]

[dependency-groups]
test = ["pytest"]

[project.scripts]
yle-dl = "yledl.yledl:main"

[project.urls]
Home = "https://aajanki.github.io/yle-dl/"
Source = "https://github.com/aajanki/yle-dl/"
changelog = "https://github.com/aajanki/yle-dl/blob/master/ChangeLog"
issues = "https://github.com/aajanki/yle-dl/issues"

[tool.flit.module]
name = "yledl"

[tool.flit.sdist]
include = ["*.md", "COPYING", "ChangeLog", "setup.py", "yledl.conf.sample", "tests/**/*.py"]
exclude = ["**/*~"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    # Too many leading # before block comment
    "E266"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
disable_error_code = "import-untyped"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
